<resources>
	<string name="app_name">ShoeStore</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="passwordLabel">Password</string>
	<string name="emailLabel">Email</string>
	<string name="loginButtonText">Login</string>
	<string name="registerButtonText">Register</string>
	<string name="got_it">Got it</string>
	<string name="welcome_message">Welcome to our shop! Our mission is to earn money, more money… more gold!</string>
	<string name="welcome_title">Welcome</string>
	<string name="instructionsTitle">Instructions</string>
	<string name="instructionsMessage">Just spend your money on everything you see. Don\'t think if you need it or not, just buy. We will cover you with instant credit at 15% a day.</string>
	<string name="instructionsButton">Got it</string>
	<string name="logout">Logout</string>
	<string name="shoe_name">Name</string>
	<string name="shoe_company">Company</string>
	<string name="shoe_size">Size</string>
	<string name="shoe_description">Description</string>
	<string name="create_shoe_title">New Shoe</string>
	<string name="save_shoe">Save</string>
	<string name="cancel_edit_shoe">Cancel</string>
	<string name="new_shoe_title">New Shoe</string>
	<string name="createButtontext">+</string>
	<string name="shoe_store">Shoe Store</string>
	<string name="shoe_size_format">Size - %.1f</string>
</resources>
