<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".LoginFragment"
		>

		<Button
			android:id="@+id/login_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/loginButtonText"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/register_button"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/password_label"
			app:layout_constraintVertical_bias="0.25"
			/>

		<Button
			android:id="@+id/register_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/registerButtonText"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.75"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/login_button"
			app:layout_constraintVertical_bias="0.0"
			/>

		<EditText
			android:id="@+id/email_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textEmailAddress"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.25"
			/>

		<EditText
			android:id="@+id/password_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPassword"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/email_label"
			app:layout_constraintVertical_bias="0.0"
			/>

		<TextView
			android:id="@+id/email_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@id/email_input"
			android:text="@string/emailLabel"
			android:textAllCaps="true"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/email_input"
			/>

		<TextView
			android:id="@+id/password_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@id/password_input"
			android:text="@string/passwordLabel"
			android:textAllCaps="true"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/password_input"
			/>

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>